[gd_scene load_steps=11 format=3 uid="uid://2jfo5euygo3c"]

[ext_resource type="Script" path="res://scripts/thumper.gd" id="1_bvb3x"]
[ext_resource type="SpriteFrames" uid="uid://c8220n0vhrqp0" path="res://assets/Thumper2.tres" id="2_1bskt"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_psqdy"]
light_mode = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xm3li"]
radius = 10.67
height = 74.67

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvw2p"]
size = Vector2(74.667, 74.667)

[sub_resource type="Animation" id="Animation_gg58k"]
resource_name = "CrawlLeft"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6.1, 2.3), Vector2(-6.1, 44), Vector2(-32, 45.87), Vector2(-41.75, 45.87)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [1.5708, 1.5708, 3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Detect:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Brace:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Drone:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_animation"
}]
}

[sub_resource type="Animation" id="Animation_5t1dw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Detect:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Brace:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ktoxc"]
_data = {
"CrawlLeft": SubResource("Animation_gg58k"),
"RESET": SubResource("Animation_5t1dw")
}

[sub_resource type="Animation" id="Animation_l5fek"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"jump"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_285bj"]
_data = {
"Jump": SubResource("Animation_l5fek")
}

[node name="Drone" type="Node2D"]
visible = false
light_mask = 6
texture_filter = 1
material = SubResource("CanvasItemMaterial_psqdy")
scale = Vector2(0.375, 0.375)
script = ExtResource("1_bvb3x")

[node name="Drone" type="AnimatedSprite2D" parent="."]
light_mask = 6
use_parent_material = true
sprite_frames = ExtResource("2_1bskt")
animation = &"Jump"
autoplay = "Crawl"
frame = 1

[node name="Detect" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(0, -112)
shape = SubResource("CapsuleShape2D_xm3li")

[node name="Brace" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brace"]
position = Vector2(0, -112)
shape = SubResource("RectangleShape2D_hvw2p")

[node name="Crawl" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ktoxc")
}

[node name="Jump" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_285bj")
}

[connection signal="area_entered" from="Detect" to="." method="_on_detect_area_entered"]
[connection signal="area_entered" from="Brace" to="." method="_on_brace_area_entered"]
[connection signal="area_exited" from="Brace" to="." method="_on_brace_area_exited"]
